<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/menu_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/menu_background"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="86dp" />

    <ImageView
        android:id="@+id/menu_bzz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/menu_bzz"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="200dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:padding="10dp">

        <Button
            android:id="@+id/btn_start"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/pressed_btn_full"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/btn_start"
            android:textColor="@color/blueStroke"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/pressed_btn_full"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/settings"
            android:textColor="@color/blueStroke"
            android:textSize="24sp" />


    </LinearLayout>

</RelativeLayout>