<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog"
    android:scaleType="centerCrop"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/btn_dialog"
            android:textSize="24sp"
            android:textColor="@color/blueStroke"
            android:textAlignment="center"
            android:gravity="center"
            android:background="@drawable/pressed_btn_full"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"/>

        <Button
            android:id="@+id/btn_to_lvl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/btn_to_menu"
            android:textSize="24sp"
            android:textColor="@color/blueStroke"
            android:textAlignment="center"
            android:gravity="center"
            android:background="@drawable/pressed_btn_full"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"/>

        <Button
            android:id="@+id/btn_to_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/btn_to_exit"
            android:textSize="24sp"
            android:textColor="@color/blueStroke"
            android:textAlignment="center"
            android:gravity="center"
            android:background="@drawable/pressed_btn_full"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="10"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sound_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="🔕"
                android:textSize="24sp"
                android:textColor="@color/blueStroke"
                android:textAlignment="center"
                android:gravity="center"
                android:background="@drawable/pressed_btn_full"
                android:padding="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"/>

            <Button
                android:id="@+id/sound_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/pressed_btn_full"
                android:gravity="center"
                android:padding="10dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="🔔"
                android:textAlignment="center"
                android:textColor="@color/blueStroke"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>